kubernetes/apps/default/gotify/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name gotify
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gotify.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
